objects/Purchase__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase</relationshipLabel>
        <relationshipName>Purchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Participation</label>
        <referenceTo>Course_Participation__c</referenceTo>
        <relationshipLabel>Purchase</relationshipLabel>
        <relationshipName>Purchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Participation</label>
        <referenceTo>Event_Participation__c</referenceTo>
        <relationshipLabel>Purchase</relationshipLabel>
        <relationshipName>Purchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Purchase</label>
    <nameField>
        <displayFormat>Pur-{0000000000}</displayFormat>
        <label>Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Type_Course_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>isPickval(Type__c, &apos;Couse&apos;) &amp;&amp; 
NOT(ISBLANK( Course_Participation__c ) == FALSE &amp;&amp; ISBLANK( Event_Participation__c ))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>When a purchase type is &apos;Course&apos; Course participation has to be filled and Event Participation should be left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Event_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>isPickval(Type__c, &apos;Event&apos;) &amp;&amp; 
NOT(ISBLANK( Course_Participation__c ) &amp;&amp; ISBLANK( Event_Participation__c ) == FALSE)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>When a purchase type is &apos;Event&apos;, Event Participation has to be filled and Course Participation should be left blank.</errorMessage>
    </validationRules>
</CustomObject>